# testmo-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py  dev.py  main.py  testmo_config.py
src/api_client/: __init__.py  api_client_v1.py  errors.py
src/api_client/schemas/: __init__.py  api_response.py  attachments.py  automation_runs.py  automation_sources.py  cases.py  common.py  folders.py  groups.py  issues.py  milestones.py  projects.py  results.py  roles.py  runs.py  sessions.py  users.py
src/mcp_servers/: __init__.py  base_mcp_server.py  testmo_web_ui_mcp_server.py  tool_manager.py
