[project]
name = "testmo-mcp"
version = "0.0.2"
description = "A Model Context Protocol (MCP) server for the Testmo test management platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Omar Romdhane" },
]
keywords = ["testmo", "mcp", "testing", "test-management", "ai", "claude", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.26.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/omarromdhane/testmo-mcp"
Repository = "https://github.com/omarromdhane/testmo-mcp"
"Bug Tracker" = "https://github.com/omarromdhane/testmo-mcp/issues"
Changelog = "https://github.com/omarromdhane/testmo-mcp/blob/main/CHANGELOG.md"

[project.scripts]
testmo-mcp = "main:main"

[dependency-groups]
dev = [
    "mcp[cli]>=1.26.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
